RSEConUK2019-Cylc-Talk/css/global-stylesheet.css
/* ... */
.impress-on-introduction-to-cylc {
    animation: titleout 5s;
}

/* Substep plugin */
#impress .step .substep {
    opacity: 0;
    transition: opacity 0.5s;
}

#impress .step .substep.substep-visible {
    opacity: 1;
    transition: opacity 0.5s;
}

#impress .step .substep.flash {
    display: none;
}

#impress .step .substep.flash.substep-active {
    display: block;
}

span.comment {
    font-size: 75%;position:absolute;top:0;left:0;
}

em {
    color: #00b3fd;
}

.vflex {
    display: flex;
    flex-direction: column;
}

.vflex > * {
    margin: 0;

}

.vflex > .flexgrow {
    flex-grow: 2;
    flex-shrink: 2;
}

table.iconlist tr td:nth-child(1) {
    padding-right: 75px;
}

table.iconlist tr td:nth-child(1) > * {
    vertical-align: middle;
}

 /* Container holding the image and overlayed text */
.container {
  position: relative;
  text-align: center;
  color: black;
}
/* Centered text */
.centered-cont {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

 /* Manage two-column invisible layout for certain slides */
.split {
  height: 100%;
  width: 50%;
  position: fixed;
  z-index: 1;
}
.left {
  left: 0;
}
.right {
  right: 0;
}
.centered {
  position: absolute;
  top: -30%;
  left: 100%;
  transform: translate(-90%, -60%);
  text-align: center;
}

/* Nine-section grid to allow for some points around a central title */
.grid-container {
  display: grid;
  grid-column-gap: 10px;
  grid-row-gap: 50px;
  grid-template-columns: 200px auto 200px;
  grid-template-rows: 200px auto 200px;
  padding: 0px;
  /* background-color: red; (leave in so if need can quickly see grid lines) */
}
.grid-item {
  padding: 0px;
  text-align: center;
  font-size: 35px;
  /* background-color: white; (ditto, as above)*/
}
.grid-item-central {
  padding: 20px;
  text-align: center;
  /* background-color: white; (ditto, as above)*/
}


#curvedarrow {
  position: relative;
  width: 0;
  height: 0;
  border-top: 90px solid transparent;
  border-right: 90px solid;
  transform: rotate(10deg);
}
#curvedarrow:after {
  content: "";
  position: absolute;
  border: 0 solid transparent;
  border-top: 30px solid;
  border-radius: 200px 0 0 0;
  top: -120px;
  left: -90px;
  width: 120px;
  height: 120px;
  transform: rotate(45deg);
}
#curvedarrowrotate {
  position: relative;
  width: 0;
  height: 0;
  border-top: 90px solid transparent;
  border-right: 90px solid;
  transform: rotate(190deg);
}
#curvedarrowrotate:after {
  content: "";
  position: absolute;
  border: 0 solid transparent;
  border-top: 30px solid;
  border-radius: 200px 0 0 0;
  top: -120px;
  left: -90px;
  width: 120px;
  height: 120px;
  transform: rotate(45deg);
}

/* Create three equal columns that floats next to each other */
.threecolumn {
  float: left;
  width: 30%;
  padding: 10px;
  font-size: 40px;
}
.row:after {
  content: "";
  display: table;
  clear: both;
}
.central-col {
  width: 30%;
}

/* OpenLayers map */
.map {
   height: 100%;
   width: 110%;
}

.highlight {
    text-align: left;
    font-size: 0.6em;
}

.highlight .hll { background-color: #ffffcc }
.highlight .c { color: #aaaaaa; font-style: italic } /* Comment */
.highlight .err { color: #F00000; background-color: #F0A0A0 } /* Error */
.highlight .k { color: #0000aa } /* Keyword */
.highlight .cm { color: #aaaaaa; font-style: italic } /* Comment.Multiline */
.highlight .cp { color: #4c8317 } /* Comment.Preproc */
.highlight .c1 { color: #aaaaaa; font-style: italic } /* Comment.Single */
.highlight .cs { color: #0000aa; font-style: italic } /* Comment.Special */
.highlight .gd { color: #aa0000 } /* Generic.Deleted */
.highlight .ge { font-style: italic } /* Generic.Emph */
.highlight .gr { color: #aa0000 } /* Generic.Error */
.highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */
.highlight .gi { color: #00aa00 } /* Generic.Inserted */
.highlight .go { color: #888888 } /* Generic.Output */
.highlight .gp { color: #555555 } /* Generic.Prompt */
.highlight .gs { font-weight: bold } /* Generic.Strong */
.highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
.highlight .gt { color: #aa0000 } /* Generic.Traceback */
.highlight .kc { color: #0000aa } /* Keyword.Constant */
.highlight .kd { color: #0000aa } /* Keyword.Declaration */
.highlight .kn { color: #0000aa } /* Keyword.Namespace */
.highlight .kp { color: #0000aa } /* Keyword.Pseudo */
.highlight .kr { color: #0000aa } /* Keyword.Reserved */
.highlight .kt { color: #00aaaa } /* Keyword.Type */
.highlight .m { color: #009999 } /* Literal.Number */
.highlight .s { color: #aa5500 } /* Literal.String */
.highlight .na { color: #1e90ff } /* Name.Attribute */
.highlight .nb { color: #00aaaa } /* Name.Builtin */
.highlight .nc { color: #00aa00; text-decoration: underline } /* Name.Class */
.highlight .no { color: #aa0000 } /* Name.Constant */
.highlight .nd { color: #888888 } /* Name.Decorator */
.highlight .ni { color: #800000; font-weight: bold } /* Name.Entity */
.highlight .nf { color: #00aa00 } /* Name.Function */
.highlight .nn { color: #00aaaa; text-decoration: underline } /* Name.Namespace */
.highlight .nt { color: #1e90ff; font-weight: bold } /* Name.Tag */
.highlight .nv { color: #aa0000 } /* Name.Variable */
.highlight .ow { color: #0000aa } /* Operator.Word */
.highlight .w { color: #bbbbbb } /* Text.Whitespace */
.highlight .mf { color: #009999 } /* Literal.Number.Float */
.highlight .mh { color: #009999 } /* Literal.Number.Hex */
.highlight .mi { color: #009999 } /* Literal.Number.Integer */
.highlight .mo { color: #009999 } /* Literal.Number.Oct */
.highlight .sb { color: #aa5500 } /* Literal.String.Backtick */
.highlight .sc { color: #aa5500 } /* Literal.String.Char */
.highlight .sd { color: #aa5500 } /* Literal.String.Doc */
.highlight .s2 { color: #aa5500 } /* Literal.String.Double */
.highlight .se { color: #aa5500 } /* Literal.String.Escape */
.highlight .sh { color: #aa5500 } /* Literal.String.Heredoc */
/* ... */

